Text-overflow fix

--- a/src/components/CompactServer/CompactServer.scss
+++ b/src/components/CompactServer/CompactServer.scss
@@ -25,12 +25,22 @@
         background-color: #f9f9fb;
      }
      .server-title{
-        position: relative;
-        float: left;
-        margin: 5px;
-        width:100%;
-        font-weight: 600;
-        .server-close{
+            position: relative;
+            float: left;
+            margin: 5px;
+            width: calc(100% - 10px);
+            display: block;
+            font-weight: 600;
+        
+            :first-child{
+                width: calc(100% - 30px);
+                white-space: nowrap;
+                display: block;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                position: relative;
+            }
+            .server-close{
                 font-size: 27px;
                 position: absolute;
                 right: 10px;
@@ -39,9 +49,10 @@
                 display: none;
                 font-weight: 900;
                 cursor: pointer;
-        }
      }
-
+      
+     }
+    
      .server-title:hover .server-close, .server-close:hover{
          display: block;
      }
